// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a Target Group with tags 1`] = `
"{
  \\"//\\": {
    \\"metadata\\": {
      \\"version\\": \\"stubbed\\",
      \\"stackName\\": \\"test\\"
    }
  },
  \\"resource\\": {
    \\"aws_alb_target_group\\": {
      \\"test_testTargetGroup_ecstargetgroup_009DDF12\\": {
        \\"deregistration_delay\\": 120,
        \\"name_prefix\\": \\"A1BC\\",
        \\"port\\": 80,
        \\"protocol\\": \\"HTTP\\",
        \\"tags\\": {
          \\"name\\": \\"thedude\\",
          \\"hobby\\": \\"bowling\\"
        },
        \\"target_type\\": \\"ip\\",
        \\"vpc_id\\": \\"123\\",
        \\"health_check\\": [
          {
            \\"interval\\": 15,
            \\"path\\": \\"/\\",
            \\"protocol\\": \\"HTTP\\",
            \\"healthy_threshold\\": 5,
            \\"unhealthy_threshold\\": 3
          }
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testTargetGroup/ecs_target_group\\",
            \\"uniqueId\\": \\"test_testTargetGroup_ecstargetgroup_009DDF12\\"
          }
        }
      }
    }
  }
}"
`;

exports[`renders a Target Group without tags 1`] = `
"{
  \\"//\\": {
    \\"metadata\\": {
      \\"version\\": \\"stubbed\\",
      \\"stackName\\": \\"test\\"
    }
  },
  \\"resource\\": {
    \\"aws_alb_target_group\\": {
      \\"test_testTargetGroup_ecstargetgroup_009DDF12\\": {
        \\"deregistration_delay\\": 120,
        \\"name_prefix\\": \\"ABC\\",
        \\"port\\": 80,
        \\"protocol\\": \\"HTTP\\",
        \\"target_type\\": \\"ip\\",
        \\"vpc_id\\": \\"123\\",
        \\"health_check\\": [
          {
            \\"interval\\": 15,
            \\"path\\": \\"/\\",
            \\"protocol\\": \\"HTTP\\",
            \\"healthy_threshold\\": 5,
            \\"unhealthy_threshold\\": 3
          }
        ],
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/testTargetGroup/ecs_target_group\\",
            \\"uniqueId\\": \\"test_testTargetGroup_ecstargetgroup_009DDF12\\"
          }
        }
      }
    }
  }
}"
`;
